--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,4 +38,4 @@ jobs:
       env:
         PYTHONPATH: ./RealisticDaylight/src
       run: |
-        pytest RealisticDaylight/tests
+        pytest
