remove bad imports from test_orography_handler.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 */__pycache__
 tests/mytests.ipynb
+RealisticDaylight/tests/__pycache__/test_orography_handler.cpython-312-pytest-8.3.5.pyc
+RealisticDaylight/tests/__pycache__/test_daylight_calculator.cpython-312-pytest-8.3.5.pyc
