--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       env:
-        PYTHONPATH: ./RealisticDaylight:./RealisticDaylight/src:./RealisticDaylight/RealisticDaylight:./RealisticDaylight/RealisticDaylight/src
+        PYTHONPATH: .
       run: |
         pytest
